# stabilized-mhc

./: .gitignore  LICENSE  README.md  pyproject.toml  report.aux  report.out  report.tex  report_v3.aux  report_v3.tex  report_v4.aux  report_v4.out  requirements.txt  technical_report.tex
.github/workflows/: ci.yml
benchmarks/: benchmark_sinkhorn.py
demo/: AUDIT_SUMMARY.md  README_MHC_DEMO.md  SUBMISSION_NOTES.md  constrained_routing_demo.py  primitives_fixture.yaml
experiments/: SPRC.ipynb  benchmark.py  stress_verify.py  verify.py  verify_sprc.py  visualize.py
src/: __init__.py  sprc.py  utils.py
src/stabilized_mhc/: __init__.py  sprc.py  utils.py
tests/: test_constraints.py  test_forbidden_primitives_zero.py  test_gradcheck.py  test_kill_switch_sweep.py
