[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stabilized-mhc"
version = "0.1.0"
description = "Stabilized piecewise-rational chart for doubly stochastic matrices."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
  "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
